feat(security): validate OwnBC enforcement across PUT/PATCH with RBAC integration
- verified owner-based access control (OwnBC) for vehicle updates
- confirmed non-owner access is correctly denied (403)
- validated VEHICLE_OWNERSHIP_OVERRIDE for admin roles
- ensured superadmin bypass behavior is consistent
- confirmed PATCH endpoint enforces same ownership rules as PUT
- validated delete restrictions align with RBAC policy (manager cannot delete)

status: OwnBC + RBAC integration fully tested and stable