@@ -1,75 +1,114 @@
 package com.godfrey.fleet.vehicle;
 
+import com.godfrey.fleet.common.exception.ResourceNotFoundException;
+import com.godfrey.fleet.security.Permissions;
+import com.godfrey.fleet.security.service.CurrentUserService;
+import com.godfrey.fleet.user.User;
 import com.godfrey.fleet.vehicle.dto.VehicleCreateDTO;
 import com.godfrey.fleet.vehicle.dto.VehiclePatchDTO;
 import com.godfrey.fleet.vehicle.dto.VehicleResponseDTO;
 import com.godfrey.fleet.vehicle.dto.VehicleUpdateDTO;
-import com.godfrey.fleet.common.exception.ResourceNotFoundException;
+import lombok.RequiredArgsConstructor;
+import org.springframework.security.access.AccessDeniedException;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
+@Transactional
 public class VehicleService implements IVehicleService {
+
+    public VehicleService (VehicleRepository vehicleRepository, VehicleMapper vehicleMapper, CurrentUserService currentUserService) {
+        this.vehicleRepository = vehicleRepository;
+        this.vehicleMapper = vehicleMapper;
+        this.currentUserService = currentUserService;
+    }
 
     private final VehicleRepository vehicleRepository;
     private final VehicleMapper vehicleMapper;
-
-    public VehicleService(VehicleRepository vehicleRepository, VehicleMapper vehicleMapper) {
-        this.vehicleRepository = vehicleRepository;
-        this.vehicleMapper = vehicleMapper;
-    }
+    private final CurrentUserService currentUserService;
 
     @Override
     @PreAuthorize("hasAuthority(T(com.godfrey.fleet.security.Permissions).VEHICLE_CREATE)")
     public VehicleResponseDTO createVehicle(VehicleCreateDTO dto) {
+        User currentUser = currentUserService.getCurrentUser();
+
         Vehicle vehicle = vehicleMapper.fromCreateDTO(dto);
-        return vehicleMapper.toResponse(vehicleRepository.save(vehicle));
+        vehicle.setOwner(currentUser);
+
+        Vehicle savedVehicle = vehicleRepository.save(vehicle);
+        return vehicleMapper.toResponse(savedVehicle);
     }
 
     @Override
     @PreAuthorize("hasAuthority(T(com.godfrey.fleet.security.Permissions).VEHICLE_UPDATE)")
     public VehicleResponseDTO updateVehicle(Long id, VehicleUpdateDTO dto) {
-        Vehicle vehicle = vehicleRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Vehicle not found: " + id));
-        vehicleMapper.updateFromDTO(dto, vehicle);
-        return vehicleMapper.toResponse(vehicleRepository.save(vehicle));
+        Vehicle existingVehicle = findVehicleByIdOrThrow(id);
+        validateOwnershipOrOverride(existingVehicle);
+
+        vehicleMapper.updateFromDTO(dto, existingVehicle);
+
+        Vehicle savedVehicle = vehicleRepository.save(existingVehicle);
+        return vehicleMapper.toResponse(savedVehicle);
     }
 
     @Override
     @PreAuthorize("hasAuthority(T(com.godfrey.fleet.security.Permissions).VEHICLE_UPDATE)")
     public VehicleResponseDTO patchVehicle(Long id, VehiclePatchDTO dto) {
-        Vehicle vehicle = vehicleRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Vehicle not found: " + id));
+        Vehicle existingVehicle = findVehicleByIdOrThrow(id);
+        validateOwnershipOrOverride(existingVehicle);
 
-        vehicleMapper.patchFromDTO(dto, vehicle);
+        vehicleMapper.patchFromDTO(dto, existingVehicle);
 
-        return vehicleMapper.toResponse(vehicleRepository.save(vehicle));
+        Vehicle savedVehicle = vehicleRepository.save(existingVehicle);
+        return vehicleMapper.toResponse(savedVehicle);
     }
 
     @Override
     @PreAuthorize("hasAuthority(T(com.godfrey.fleet.security.Permissions).VEHICLE_DELETE)")
     public void deleteVehicle(Long id) {
-        Vehicle vehicle = vehicleRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Vehicle not found: " + id));
-        vehicleRepository.delete(vehicle);
+        Vehicle existingVehicle = findVehicleByIdOrThrow(id);
+        validateOwnershipOrOverride(existingVehicle);
+
+        vehicleRepository.delete(existingVehicle);
+    }
+
+    private Vehicle findVehicleByIdOrThrow(Long id) {
+        return vehicleRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Vehicle not found with id: " + id));
+    }
+
+    private void validateOwnershipOrOverride(Vehicle vehicle) {
+        User currentUser = currentUserService.getCurrentUser();
+
+        boolean isOwner = vehicle.getOwner() != null
+                && vehicle.getOwner().getId() != null
+                && vehicle.getOwner().getId().equals(currentUser.getId());
+
+        boolean hasOwnershipOverride = currentUserService.hasAuthority(Permissions.VEHICLE_OWNERSHIP_OVERRIDE);
+
+        if (!isOwner && !hasOwnershipOverride) {
+            throw new AccessDeniedException("You do not have permission to modify this vehicle");
+        }
     }
 
     @Override
     @PreAuthorize("hasAuthority(T(com.godfrey.fleet.security.Permissions).VEHICLE_READ)")
+    @Transactional(readOnly = true)
     public VehicleResponseDTO getVehicle(Long id) {
-        Vehicle vehicle = vehicleRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Vehicle not found: " + id));
+        Vehicle vehicle = findVehicleByIdOrThrow(id);
         return vehicleMapper.toResponse(vehicle);
     }
 
     @Override
     @PreAuthorize("hasAuthority(T(com.godfrey.fleet.security.Permissions).VEHICLE_READ)")
+    @Transactional(readOnly = true)
     public List<VehicleResponseDTO> listVehicles() {
-        return vehicleRepository.findAll().stream()
+        return vehicleRepository.findAll()
+                .stream()
                 .map(vehicleMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
